fix collapsing when at tablet size

--- a/scss/layout/_columns.scss
+++ b/scss/layout/_columns.scss
@@ -1,22 +1,8 @@
 //Columns Styling
 
-// that goddamn weather column
-
-
-
-//
-// .offset-col {
-//   display: none;
-//
-//   @include media($desktop) {
-//     @include span-columns(2);
-//   }
-// }
-
 // column containers
 
 .weather {
-  border: 1px solid black;
   display: none;
 
   @include media($desktop) {
@@ -36,6 +22,7 @@
 
 
 .container2 {
+  background-color: white;
   @include media($mobile) {
 
   @include fill-parent();
@@ -45,11 +32,12 @@
   @include media($desktop) {
     @include span-columns(10);
     @include omega();
-    padding: 0;
+    padding-bottom: 10px;
     }
   }
 }
 .container3 {
+  background-color: white;
   @include media($mobile) {
 
   @include fill-parent();
@@ -68,22 +56,23 @@
 .main-article {
   border: 1px solid black;
   background-color: $color-primary--body;
-  padding: 0;
 
   @include media($mobile) {
     @include span-columns(9);
     @include omega();
 
   @include media($desktop) {
+    margin: 20px;
     height: 300px;
     @include span-columns(8 of 10);
+    @include omega();
     }
   }
 }
 
 .side-column {
   border: 1px solid black;
-
+  background-color: $color-primary--body;
   @include media($mobile) {
     @include span-columns(3);
 
@@ -106,6 +95,7 @@
 
   @include media($desktop) {
     height: 300px;
+    margin: 15px;
     @include span-columns(2 of 10);
     }
   }
@@ -116,8 +106,8 @@
   background-color: $color-primary--body;
 
   @include media($mobile) {
-    @include span-columns(3);
-
+    height: 300px;
+    @include span-columns(2 of 10);
   @include media($desktop) {
     height: 300px;
     @include span-columns(2 of 10);
